fix: z-index issue in menubar

--- a/src/assets/layout/styles/layout/_menu.scss
+++ b/src/assets/layout/styles/layout/_menu.scss
@@ -2,7 +2,7 @@
     position: fixed;
     width: 300px;
     height: calc(100vh - 9rem);
-    z-index: 999;
+    z-index: 1003;
     overflow-y: auto;
     user-select: none;
     top: 7rem;
