--- a/src/assets/layout/styles/layout/_responsive.scss
+++ b/src/assets/layout/styles/layout/_responsive.scss
@@ -80,7 +80,7 @@
             position: fixed;
             top: 0;
             left: 0;
-            z-index: 998;
+            z-index: 1002;
             width: 100%;
             height: 100%;
             background-color: var(--maskbg);
